build / test apps package with multiple CPUs Improves build/test times for apps-package artifacts: - Use uglifyjs-webpack-plugin v1.3.0 with `parallel` option - refactor test-low-memory.sh script to run tests using parallel/xargs   even in non-circleci environments. - small changes to Rakefile build/package scripts for clearer logging output

--- a/apps/package.json
+++ b/apps/package.json
@@ -34,7 +34,8 @@
   },
   "resolutions": {
     "eshost": "github:pcardune/eshost#f3fa7fa",
-    "test262-compiler": "github:pcardune/test262-compiler#ffa0dff"
+    "test262-compiler": "github:pcardune/test262-compiler#ffa0dff",
+    "uglifyjs-webpack-plugin": "1.3.0"
   },
   "devDependencies": {
     "@cdo/apps": "file:src",
